--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿	<!DOCTYPE html>
 	<html>
 	<head>
-		<title></title>
+		<title>Gif Animator</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -14,7 +14,7 @@
 	<body>
 	<div class="container">
 		<div class="jumbotron">
-    			<h1>#</h1> 
+    			<h1>Animated Gif Search</h1> 
 		
      		
   		</div>
